updated joinGroup